Fix card overlay right side extra space

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -76,7 +76,7 @@ html, body {
     padding: 0;
     margin: 0;
     position: relative;
-    width: 196%;
+    width: 190%;
     height: 100%;
     //-webkit-transform: translateZ(0);
     list-style-type: none;
@@ -85,7 +85,7 @@ html, body {
     display: block;
     float: left;
     padding-right: 1.5%;
-    width: 47%;
+    width: 50%;
     position: relative;
     -webkit-transform: translateY(-50%) translateZ(0);
     top: 50%;
@@ -101,7 +101,10 @@ html, body {
       }
     }
     &:first-child {
-      padding-left: 4.5%;
+      padding-left: 3%;
+    }
+    &:last-child {
+      padding-right: 3%;
     }
   }
   /*.draggable-card {
